--- a/_vti_cnf/default.html
+++ b/_vti_cnf/default.html
@@ -1,18 +1,18 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|EDI\\Anthony
 vti_modifiedby:SR|EDI\\Anthony
-vti_timelastmodified:TR|27 Oct 2015 04:44:10 -0000
+vti_timelastmodified:TR|27 Oct 2015 17:25:50 -0000
 vti_timecreated:TR|26 Oct 2015 08:00:22 -0000
 vti_extenderversion:SR|12.0.0.0
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|27 Oct 2015 04:42:57 -0000
+vti_nexttolasttimemodified:TW|27 Oct 2015 17:25:09 -0000
 vti_title:SR|Olapic Carousel
-vti_cacheddtm:TX|27 Oct 2015 04:44:10 -0000
-vti_filesize:IR|1727
+vti_cacheddtm:TX|27 Oct 2015 17:25:09 -0000
+vti_filesize:IR|832
 vti_cachedtitle:SR|Olapic Carousel
 vti_cachedbodystyle:SR|<body>
-vti_cachedlinkinfo:VX|Q|sliderstyle.css S|http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js S|sliderscript.js S|images/1.jpg S|images/2.jpg S|images/3.jpg S|images/4.jpg S|images/5.jpg S|images/6.jpg S|images/7.jpg S|images/8.jpg S|images/9.jpg S|images/10.jpg S|images/11.jpg S|images/12.jpg S|images/13.jpg S|images/14.jpg S|images/15.jpg S|images/16.jpg S|images/17.jpg S|images/18.jpg
-vti_cachedsvcrellinks:VX|FQUS|sliderstyle.css NSHS|http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js FSUS|sliderscript.js FSUS|images/1.jpg FSUS|images/2.jpg FSUS|images/3.jpg FSUS|images/4.jpg FSUS|images/5.jpg FSUS|images/6.jpg FSUS|images/7.jpg FSUS|images/8.jpg FSUS|images/9.jpg FSUS|images/10.jpg FSUS|images/11.jpg FSUS|images/12.jpg FSUS|images/13.jpg FSUS|images/14.jpg FSUS|images/15.jpg FSUS|images/16.jpg FSUS|images/17.jpg FSUS|images/18.jpg
+vti_cachedlinkinfo:VX|Q|sliderstyle.css S|http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js S|sliderscript.js
+vti_cachedsvcrellinks:VX|FQUS|sliderstyle.css NSHS|http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js FSUS|sliderscript.js
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
