--- a/default.html
+++ b/default.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
   	<title>Olapic Carousel</title>
   	<meta charset="utf-8">
 	<link rel="stylesheet" href="sliderstyle.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<script type="text/javascript" src="sliderscript.js"></script>
   </head>
   
